--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -4,6 +4,7 @@ metadata:
   annotations:
     backstage.io/kubernetes-id: my-kubernetes-component
     backstage.io/kubernetes-namespace: default
+    kubecost.com/deployment-name: '"my-kubernetes-deployment-name"'
   name: my-kubernetes-component
 spec:
   lifecycle: production
