--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -11,8 +11,6 @@
 #   owner: my-team
 #   type: service
 
-
-
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
@@ -21,3 +19,5 @@ metadata:
   name: my-kubernetes-component
 spec:
   lifecycle: production
+  owner: my-team
+  type: service
