--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,8 +1,12 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
+  annotations:
+    backstage.io/kubernetes-id: my-kubernetes-component
   name: my-kubernetes-component
 spec:
   lifecycle: production
   owner: my-team
   type: service
+
+  
