--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -3,6 +3,7 @@ kind: Component
 metadata:
   annotations:
     backstage.io/kubernetes-id: my-kubernetes-component
+    kubecost.com/deployment-name: my-kubernetes-component
   name: my-kubernetes-component
 spec:
   lifecycle: production
