--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -4,6 +4,7 @@ metadata:
   annotations:
     backstage.io/kubernetes-id: my-kubernetes-component
     kubecost.com/deployment-name: my-kubernetes-component
+    github.com/project-slug: https://github.com/abbhishekpandey47/my-kubernetes-component
   name: my-kubernetes-component
 spec:
   lifecycle: production
